--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=.8">
-	<link rel="stylesheet" href="static/css/dist/normalize.css">
-	<link rel="stylesheet" href="static/css/dist/style.css">
+  <link rel="stylesheet" href="static/css/dist/normalize.css">
+  <link rel="stylesheet" href="static/css/dist/style.css">
 </head>
 <body>
   <div class="container">
-  	<img src="/static/assets/Charles_Elme_Francatelli.jpg">
-  	<div class="scroll">
-  	  <span>No. 53</span>
-  	  <h2>Bacon and Cabbage Soup</h2>
-  	  <p>When it happens that you have a dinner consisting of bacon and cabbages, you invariably throw away the liquor in which they have been boiled, or, at the best, give it to the pigs, if you possess any; this is wrong, for it is easy to turn it to a better account for your own use, by paying attention to the following instructions, viz.:—Put your piece of bacon on to boil in a pot with two gallons (more or less, according to the number you have to provide for) of water, when it has boiled up, and has been well skimmed, add the cabbages, kale, greens, or sprouts, whichever may be used, well washed and split down, and also some parsnips and carrots; season with pepper, but no salt, as the bacon will season the soup sufficiently; and when the whole has boiled together very gently for about two hours, take up the bacon surrounded with the cabbage, parsnips, and carrots, leaving a small portion of the vegetables in the soup, and pour this into a large bowl containing slices of bread; eat the soup first, and make it a rule that those who eat most soup are entitled to the largest share of bacon.</p>
-  	</div>
+    <img class="charles" src="/static/assets/Charles_Elme_Francatelli.jpg">
+    <div class="scroll">
+      <span class="number"></span>
+      <h2 class="title"></h2>
+      <p class="text"></p>
+    </div>
   </div>
-<script src="static/js/app.js"></script>	
+<script src="static/js/app.js"></script>  
 </body>
 </html>
